test(adoption) : ce que PIT a trouvé que la mutation à la main avait manqué (#1985)
Mutation manuelle : verte puis rouge, garde-fou validé. PIT sur la même classe :
6 mutants tués sur 13. La mutation à la main n'en éprouve qu'un, celui auquel on
pense - et on pense à celui qu'on vient d'écrire.

Les sept survivants disaient tous la même chose : mes tests vérifiaient CE QUI
est écrit (un original inséré, ou pas), jamais CE QU'IL PORTE. La taille relevée
sur le fichier, la durée déduite de la taille, le chemin canonique, l'empreinte
capturée à la régénération : rien n'était affirmé, et le calcul de durée pouvait
être mis en pièces sans qu'un test bronche.

S'y ajoutait un test creux de ma main : originauxPurges() rend un BOOLÉEN, et je
l'affirmais isNotNull(). Vrai quoi qu'il arrive. Il affirme désormais isTrue(),
après avoir constaté que la nuit semée ne l'est pas.

Un troisième test tient la frontière de l'en-tête WAV : 44 octets, c'est
l'en-tête et rien d'autre, donc aucune durée. C'est lui qui tue les mutants de
borne. 13 sur 13 désormais.

La doc gagne deux choses apprises en chemin : PIT tourne sur les classes de vue
si on lui passe les options de la JVM headless (le profil ne reprend pas
l'argLine de Surefire), et son rapport XML écrit ses attributs en apostrophes
simples - un filtre en guillemets doubles annonce « 0 survivant » sur n'importe
quoi, ce qui m'a fait croire un moment que tout était tué.

Suite de #1976.